<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/fondo5"
    tools:context=".login.LoginActivity"

    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"

      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="20dp"
      android:gravity="center"
      android:orientation="vertical">


      <ImageView
          android:layout_width="400dp"
          android:layout_height="280dp"
          android:src="@drawable/fondonoria"/>
      <EditText
          android:id="@+id/edtCorreo"
          android:layout_width="250dp"
          android:layout_height="50dp"
          android:layout_marginTop="20dp"
          android:hint="@string/edt_email"
          android:textColorHint="@color/black"
          android:fontFamily="@font/ebgaramond_medium"/>
      <EditText
          android:id="@+id/edtClave"
          android:layout_width="250dp"
          android:layout_height="50dp"
          android:layout_marginTop="20dp"
          android:hint="@string/edt_contraseña"
          android:fontFamily="@font/ebgaramond_medium"
          android:textColorHint="@color/black"
          android:inputType="textPassword"/>



      <Button
          android:id="@+id/btnIngresar"
          android:layout_width="250dp"
          android:layout_height="50dp"
          android:layout_marginTop="20dp"
          android:hint="@string/btn_ingresar"
          android:textColorHint="@color/white"
          android:backgroundTint="@color/red"

          />

      <Button
          android:id="@+id/btnRegister"
          android:layout_width="250dp"
          android:layout_height="50dp"
          android:layout_marginTop="20dp"
          android:hint="@string/btn_register"
          android:textColorHint="@color/hed"
          android:backgroundTint="@color/blue"

          />




      <Button
          android:id="@+id/btnClave"
          android:layout_width="250dp"
          android:layout_height="50dp"
          android:layout_marginTop="20dp"
          android:hint="@string/edt_olvcon"
          android:textColorHint="@color/black"
          android:backgroundTint="@color/ligthblue"

          />



  </LinearLayout>




</LinearLayout>